Fixed input border not appearing on mobile.

--- a/client/styles/Thanks.module.css
+++ b/client/styles/Thanks.module.css
@@ -68,7 +68,7 @@
   width: 100%;
   padding: 12px 20px;
   margin: 10px 0;
-  border-width: 0;
+  border: 1px solid #dadada;
   border-radius: 10px;
   box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
@@ -79,7 +79,7 @@
   width: 100%;
   padding: 12px 20px;
   margin: 10px 0;
-  border-width: 0;
+  border: 1px solid #dadada;
   border-radius: 10px;
   box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
